ikubernetes_1.16.2/user-kubernetes/ingress/hostname-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname-ingress
spec:
  rules:
  - host: wap.k8s.io
    http:
      paths:
      - path:
        backend:
          serviceName: wap-ingress-service
          servicePort: 80

  - host: api.k8s.io
    http:
      paths:
      - path:
        backend:
          serviceName: api-ingress-service
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wap-ingress-service
spec:
  selector:
    app: wap-ingress
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: api-ingress-service
spec:
  selector:
    app: api-ingress
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wap-ingress-deployment
spec:
  selector:
    matchLabels:
      app: wap-ingress
  replicas: 2
  template:
    metadata:
      labels:
        app: wap-ingress
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v1

---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: api-ingress-deployment
spec:
  selector:
    matchLabels:
      app: api-ingress
  replicas: 2
  template:
    metadata:
      labels:
        app: api-ingress
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v1
